--- a/last_hws/hw4/concrete.html
+++ b/last_hws/hw4/concrete.html
@@ -84,7 +84,7 @@ plotVariables &lt;- function() {
   model &lt;- lm(formula, data.concrete)
   print(AIC(model))
   print(summary(model))
-  print(tune(lm, as.formula(model), data = data.concrete, tunecontrol = tune.control(sampling = &quot;cross&quot;)))
+  print(tune(lm, as.formula(model), data = data.concrete, tunecontrol = tune.control(cross = nrow(data.concrete))))
 }</code></pre>
 <pre class="r"><code>data.concrete &lt;- read.csv(&quot;data/Concrete_Data.csv&quot;, comment.char = '#')
 names(data.concrete) &lt;- c(&quot;Cem&quot;, &quot;Slag&quot;, &quot;Ash&quot;, &quot;Wat&quot;, &quot;Plast&quot;, &quot;CorAgg&quot;, &quot;FinAgg&quot;, &quot;Age&quot;, &quot;Y&quot;)
@@ -144,7 +144,7 @@ summary(data.concrete)</code></pre>
 ## F-statistic: 204.3 on 8 and 1021 DF,  p-value: &lt; 2.2e-16
 ## 
 ## 
-## Error estimation of 'lm' using 10-fold cross validation: 110.0687</code></pre>
+## Error estimation of 'lm' using leave-one-out: 109.6108</code></pre>
 <pre class="r"><code>estimateModel(Y ~ Age + Cem + Wat + Plast + Slag + Ash)</code></pre>
 <pre><code>## [1] 7757.928
 ## 
@@ -172,7 +172,7 @@ summary(data.concrete)</code></pre>
 ## F-statistic: 271.2 on 6 and 1023 DF,  p-value: &lt; 2.2e-16
 ## 
 ## 
-## Error estimation of 'lm' using 10-fold cross validation: 109.1914</code></pre>
+## Error estimation of 'lm' using leave-one-out: 109.5794</code></pre>
 <pre class="r"><code>estimateModel(Y ~ Age + Cem * Wat + Plast + Slag + Ash)</code></pre>
 <pre><code>## [1] 7759.766
 ## 
@@ -201,7 +201,7 @@ summary(data.concrete)</code></pre>
 ## F-statistic: 232.3 on 7 and 1022 DF,  p-value: &lt; 2.2e-16
 ## 
 ## 
-## Error estimation of 'lm' using 10-fold cross validation: 109.5476</code></pre>
+## Error estimation of 'lm' using leave-one-out: 109.8588</code></pre>
 <pre class="r"><code>estimateModel(Y ~ Age + Cem * Wat + Slag + Ash)</code></pre>
 <pre><code>## [1] 7764.35
 ## 
@@ -229,7 +229,7 @@ summary(data.concrete)</code></pre>
 ## F-statistic: 268.5 on 6 and 1023 DF,  p-value: &lt; 2.2e-16
 ## 
 ## 
-## Error estimation of 'lm' using 10-fold cross validation: 109.7101</code></pre>
+## Error estimation of 'lm' using leave-one-out: 110.2861</code></pre>
 <pre class="r"><code>estimateModel(Y ~ Age + Cem + Wat + Slag + Ash)</code></pre>
 <pre><code>## [1] 7764.026
 ## 
@@ -256,7 +256,7 @@ summary(data.concrete)</code></pre>
 ## F-statistic: 321.6 on 5 and 1024 DF,  p-value: &lt; 2.2e-16
 ## 
 ## 
-## Error estimation of 'lm' using 10-fold cross validation: 111.2246</code></pre>
+## Error estimation of 'lm' using leave-one-out: 110.1798</code></pre>
 <p>Из просмотренных моделей выберем самую лучшую по КВ (вторую) и пойдем с ней дальше. Образцы у нас распределены по времени неравномерно, предполагая нелинейную зависимость от Age, прологарифмируем его.</p>
 <pre class="r"><code># data.concrete$Age &lt;- log(data.concrete$Age)
 data.concrete$Age &lt;- factor(data.concrete$Age)
@@ -300,7 +300,7 @@ estimateModel(Y ~ Age + Cem + Wat + Plast + Slag + Ash)</code></pre>
 ## F-statistic: 281.8 on 18 and 1011 DF,  p-value: &lt; 2.2e-16
 ## 
 ## 
-## Error estimation of 'lm' using 10-fold cross validation: 48.12386</code></pre>
+## Error estimation of 'lm' using leave-one-out: 48.20042</code></pre>
 <p>Посмотрим, что у Ash, Plast и Slag на графиках видно большое кол-во образцов с конкретным значением параметра в 0 (у Wat тоже, но у него вокруг конкретных значений еще и другие данные)</p>
 <pre class="r"><code>data.concrete$PlastBord &lt;- data.concrete$Plast &gt; 0
 data.concrete$AshBord &lt;- data.concrete$Ash &gt; 0
@@ -344,7 +344,7 @@ estimateModel(Y ~ Age + Cem + Wat + PlastBord + Slag + Ash)</code></pre>
 ## F-statistic:   294 on 18 and 1011 DF,  p-value: &lt; 2.2e-16
 ## 
 ## 
-## Error estimation of 'lm' using 10-fold cross validation: 46.43711</code></pre>
+## Error estimation of 'lm' using leave-one-out: 46.50151</code></pre>
 <pre class="r"><code>estimateModel(Y ~ Age + Cem + Wat + PlastBord + Slag + Ash)</code></pre>
 <pre><code>## [1] 6877.565
 ## 
@@ -384,7 +384,7 @@ estimateModel(Y ~ Age + Cem + Wat + PlastBord + Slag + Ash)</code></pre>
 ## F-statistic:   294 on 18 and 1011 DF,  p-value: &lt; 2.2e-16
 ## 
 ## 
-## Error estimation of 'lm' using 10-fold cross validation: 47.06127</code></pre>
+## Error estimation of 'lm' using leave-one-out: 46.50151</code></pre>
 <pre class="r"><code>estimateModel(Y ~ Age + Cem + Wat + AshBord + PlastBord + Slag)</code></pre>
 <pre><code>## [1] 6868.283
 ## 
@@ -424,7 +424,7 @@ estimateModel(Y ~ Age + Cem + Wat + PlastBord + Slag + Ash)</code></pre>
 ## F-statistic: 297.1 on 18 and 1011 DF,  p-value: &lt; 2.2e-16
 ## 
 ## 
-## Error estimation of 'lm' using 10-fold cross validation: 46.3488</code></pre>
+## Error estimation of 'lm' using leave-one-out: 46.10192</code></pre>
 <p>Из финальной модели видим, что в прочности бетона играют роль наличие Fly Ash и Superplasticizer, а также присутствует нелинейная зависимость от Age.</p>
 
 
