--- a/spring_bi/hw2.html
+++ b/spring_bi/hw2.html
@@ -563,6 +563,7 @@ for (a in (seq(1, 100) / 10)) {
 ## [1] &quot;NOT REJECTED&quot;
 ## [1] &quot;NOT REJECTED&quot;
 ## [1] &quot;NOT REJECTED&quot;</code></pre>
+<p>Теперь мы не отвергаем ни одного распределения, что радует.</p>
 <p>Задание 3</p>
 <p>Исследуем мощность перестановочного t-критерия и сравним с мощностью параметрического t-критерия.</p>
 <pre class="r"><code>library(RVAideMemoire)</code></pre>
